--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div id="navi"></div>
 	<div id="frame">
 		<div id="team" class="box" style="text-align: center;">
-			<a href="http://alwaysimproving.byethost7.com/hobbycards" class="myButton">Hobby Cards</a><br>
+			<a href="http://aim4u.byethost7.com/cards/index.php" class="myButton">Hobby Cards</a><br>
 			<a href="awards.html" class="myButton">Awards</a><br>
 			<a href="robotdesign.html" class="myButton">Robot Design</a><br>
 			<a href="innovation.html" class="myButton">Innovation Project</a><br>
